# plant-wate-rs

./: .gitignore  Cargo.toml  README.md  cfg.toml.example
.github/workflows/: rust.yml
plant-wate-rs-core/: Cargo.toml
plant-wate-rs-core/src/: controller.rs  lib.rs  mock_uc.rs  plant_irrigator.rs  plant_irrigator_controller.rs  uc.rs  uc_utils.rs
plant-wate-rs-esp32c3/: Cargo.toml  build.rs
plant-wate-rs-esp32c3/.cargo/: config.toml
plant-wate-rs-esp32c3/src/: main.rs  microcontroller_esp32c3.rs  wifi.rs
